# procurement-rag-assistant

./: README.md  main.py  pyproject.toml  requirements.txt
data/: nordwind_contract.txt  purchasing_policy.md  purchasing_policy.txt  suedbahn_contract.txt
eval/: questions.jsonl  run_eval.py
rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  loaders.py  pipeline.py  retriever.py  vectorstore.py
tests/: test_retriever.py
