[project]
name = "procurement-rag-assistant"
version = "0.2.0"
description = "Hybrid-retrieval RAG assistant over procurement documents with an eval harness."
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
full = ["sentence-transformers>=2.7", "faiss-cpu>=1.8", "langchain-openai>=0.1", "typer>=0.12", "pypdf>=4.0"]
dev = ["pytest>=8.0"]

[project.scripts]
rag = "rag.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
